# ros_infotaxis

./: .gitignore  CMakeLists.txt  README.md  package.xml
src/: infotaxis_node.cpp
test/: amcl.launch  custom-erratic.world  custom.pgm  gmapping.launch  move_base.launch
test/map/: map-custom-corrected.yaml  map-custom.pgm  map-custom.yaml  map-willow.yaml
test/params/: costmap.yaml  costmap_common.yaml  infotaxis_node.yaml
test/pictures/: dir.txt
